--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "npm": "5.5.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "preinstall": "npm install pm2 -g && pm2 install pm2-logrotate",
+    "start": "pm2-runtime server.js -i 0"
   },
   "author": "",
   "license": "ISC",
